--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Gulp plugin to extract the ABI from Solidity contract",
   "scripts": {
-    "coverage": "istanbul cover _mocha",
+    "coverage": "nyc _mocha",
     "test": "mocha"
   },
   "repository": {
@@ -32,12 +32,9 @@
     "chai-string": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "stream-array": "^1.1.2",
-    "stream-assert": "^2.0.3",
+    "nyc": "^13.0.1",
     "vinyl-fs-fake": "^1.1.0"
   }
 }
