--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-solidity-abi",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Gulp plugin to extract the ABI from Solidity contract",
   "scripts": {
     "coverage": "nyc _mocha",
@@ -28,13 +28,13 @@
   },
   "homepage": "https://github.com/nGoline/gulp-solidity-abi#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-string": "^1.5.0",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.4.0",
-    "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.0.1",
-    "vinyl-fs-fake": "^1.1.0"
+    "chai": "4.1.2",
+    "chai-string": "1.5.0",
+    "gulp": "^4.0.0",
+    "gulp-rename": "1.4.0",
+    "mocha": "5.2.0",
+    "mocha-lcov-reporter": "1.3.0",
+    "nyc": "^13.1.0",
+    "vinyl-fs-fake": "git+https://github.com/nGoline/vinyl-fs-fake.git"
   }
 }
