--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   "devDependencies": {
     "chai": "4.1.2",
     "chai-string": "1.5.0",
-    "gulp": "^4.0.0",
+    "gulp": "4.0.0",
     "gulp-rename": "1.4.0",
     "mocha": "5.2.0",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "^13.1.0",
-    "vinyl-fs-fake": "git+https://github.com/nGoline/vinyl-fs-fake.git"
+    "nyc": "13.1.0",
+    "vinyl-fs-fake": "^1.1.1"
   }
 }
