--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-solidity-abi",
-  "version": "0.0.3",
+  "version": "0.1.1",
   "description": "Gulp plugin to extract the ABI from Solidity contract",
   "scripts": {
     "coverage": "nyc _mocha",
@@ -34,7 +34,7 @@
     "gulp-rename": "1.4.0",
     "mocha": "5.2.0",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "13.1.0",
+    "nyc": "^15.0.0",
     "vinyl-fs-fake": "^1.1.1"
   }
 }
